--- a/views/index.pug
+++ b/views/index.pug
@@ -14,4 +14,6 @@ block content
       clap_count+=1;
       document.getElementById("target").innerHTML="Value is "+clap_count  ;
     }
+
+     a(href="costumes") Go to costumes page
   
