--- a/views/aeroplane.pug
+++ b/views/aeroplane.pug
@@ -7,3 +7,10 @@ block content
    div(class="row")
     each aeroplane,index in aeroplanes
         div(class="col-sm-2" onclick=`buy(${index})`) name: #{aeroplane.name} , type: #{aeroplane.type} , noofpassengers: #{aeroplane.noofpassengers} 
+
+   script. 
+    let itemNo=0
+     function buy(itemNo)
+     {
+        alert(`You purchased Item ${itemNo+1}`)
+     }
